objects/pkgviz__Package_Visualizer_Announcement__mdt.object
<CustomObject>
    <fields>
        <fullName>pkgviz__Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pkgviz__Icon__c</fullName>
        <label>Icon</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkgviz__Link__c</fullName>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pkgviz__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pkgviz__Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <label>Package Visualizer Announcement</label>
    <pluralLabel>Package Visualizer Announcements</pluralLabel>
</CustomObject>